--- a/inspection/templates/checkoff.html
+++ b/inspection/templates/checkoff.html
@@ -11,7 +11,7 @@
       	<div class="col-lg-4 mb-3">
 			<div class="card" style="width: 100%;background: black;">
 				
-					<h5><center>Completed Inspections<center></h5>
+					<h5 style="color:white;"><center>Approved Check Offs<center></h5>
 					<table class="table table-sm table-dark">
 					<tr>
 			    		<th>Date</th>
@@ -37,7 +37,7 @@
 		<div class="col-lg-3 mb-3">
 			<div class="card" style="width: 100%;background: black;">	
 				
-					<h5><center>Waiting For Approval<center></h5>
+					<h5 style="color:white;"><center>Waiting For Approval<center></h5>
 					<table class="table table-sm table-dark">
 					  {%for i in records%}
 					<tr>
@@ -52,7 +52,7 @@
 			
 			<div class="card" style="width: 100%; background: black;">		
 				
-					<h5><center>Missing/Incomplete Rerports<center></h5>
+					<h5 style="color:white;"><center>Missing/Incomplete Rerports<center></h5>
 					<table class="table table-sm table-dark">
 					<tr>
 			    		<th>Date</th>
