--- a/inspection/templates/home.html
+++ b/inspection/templates/home.html
@@ -17,10 +17,27 @@
     
 <nav class="navbar bg-dark" data-bs-theme="dark"navbar-expand-lg bg-body-tertiary>
   	<div class="container-fluid">
-    	<iframe src="https://docs.google.com/presentation/d/e/2PACX-1vTzxwyE7gvJkCurBLJM4bEA0IhkS91fTrvfnGKgvXTzrMEx4QTziKjymnDk1tukArUZVm-P36XUbXKa/embed?start=true&loop=true&delayms=3000" frameborder="0" width="1100" height="569" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+    	<iframe src="https://docs.google.com/presentation/d/e/2PACX-1vTzxwyE7gvJkCurBLJM4bEA0IhkS91fTrvfnGKgvXTzrMEx4QTziKjymnDk1tukArUZVm-P36XUbXKa/embed?start=true&loop=true&delayms=15000&rm=minimal" 
+      frameborder="0" 
+      width="1440" 
+      height="839" 
+      allowfullscreen="true" 
+      mozallowfullscreen="true" 
+      webkitallowfullscreen="true"></iframe>
     </div>
 </nav>
     <br/>
+
+    <div class="embed-container"
+    style="position: relative; padding-bottom: 59.27%; height: 0; overflow: hidden; max-width: 100%;">
+    <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vTzxwyE7gvJkCurBLJM4bEA0IhkS91fTrvfnGKgvXTzrMEx4QTziKjymnDk1tukArUZVm-P36XUbXKa/embed?start=true&loop=true&delayms=15000" 
+      frameborder="0" 
+      width="1000" 
+      height="609" 
+      allowfullscreen="true" 
+      mozallowfullscreen="true" 
+      webkitallowfullscreen="true"></iframe>
+   </div>
 
 
 {% endblock %}
